--- a/front_end/css/sign_in.css
+++ b/front_end/css/sign_in.css
@@ -6,6 +6,7 @@ body {
 
 body > div > a {
   margin-top: -30px;
+  margin-right: 10px;
 }
 
 .page-header {
@@ -20,7 +21,7 @@ body > div > a {
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 .form-signin .checkbox {
   font-weight: normal;
