--- a/DiabloDB-app-2/src/main/webapp/css/all_comments.css
+++ b/DiabloDB-app-2/src/main/webapp/css/all_comments.css
@@ -3,6 +3,14 @@ body {
   padding-bottom: 30px;
 }
 
+.newMargin {
+    margin: 20px;
+}
+
+.status {
+  padding-right: -20px;
+}
+
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
